tests/baselines/reference/recursiveTypes1.errors.txt
==== tests/cases/compiler/recursiveTypes1.ts (2 errors) ====
    interface Entity<T extends Entity<T>> {
                     ~~~~~~~~~~~~~~~~~~~
!!! recursiveTypes1.ts(1,18): error TS2229: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
       X: T;
       Y: T;
    }
    
    interface Person<U extends Person<U>> extends Entity<U> {
                     ~~~~~~~~~~~~~~~~~~~
!!! recursiveTypes1.ts(6,18): error TS2229: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
        n: number;
    }
    
    interface Customer extends Person<Customer> {
        s: string;
    }
    